--- a/src/Components/WorkItem/WorkItem.css
+++ b/src/Components/WorkItem/WorkItem.css
@@ -1,21 +1,45 @@
 .workitems {
   display: flex;
   flex-direction: column;
-  gap:1.5rem;
+  gap: 1.5rem;
 }
 .workitem-container {
   text-decoration: none;
   background-color: #fff;
-  filter: drop-shadow(0rem 0rem 1rem rgb(27 0 49 / 0.25));
-  border-radius: 0.5rem;
-  transition: transform 0.2s;
-
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 1s ease-in-out;
+  border-radius: 1rem;
+  transition: transform 0.5s;
   padding: 1.5rem 4rem 1.5rem 1.5rem;
   max-height: 400px;
   display: flex;
   flex-direction: row;
   gap: 4rem;
   align-items: center;
+}
+
+.workitem-container:after {
+  content: "";
+  border-radius: 1rem;
+  opacity: 0;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.workitem-container:hover {
+  -webkit-transform: scale(1.05);
+  cursor: pointer;
+}
+
+.workitem-container:hover::after {
+  opacity: 1;
 }
 
 .project-image {
@@ -29,34 +53,29 @@
   border-radius: 0 0 0.5rem 0.5rem;
   background-color: #fff;
   transform: translateY(0.5rem);
-  transition:transform 2s;
+  transition: transform 2s;
   display: flex;
   flex-direction: column;
-  gap:1.5rem;
+  gap: 1.5rem;
 }
 
-.workitem-content h1{
-  color: #E7E5FF;
+.workitem-content h1 {
+  color: #e7e5ff;
   line-height: 3.5rem;
 }
 
-.workitem-container h4{
+.workitem-container h4 {
   font-size: 1rem;
-  color: #4F4F4F;
+  color: #4f4f4f;
 }
 
-Link{
+Link {
   text-decoration: none;
 }
 .workitem-content p {
   color: #2e2e2e;
   font-weight: 300;
   padding-bottom: 1rem;
-}
-
-.workitem-container:hover {
-  transform: scale(1.025);
-  cursor: pointer;
 }
 
 @media only screen and (max-width: 768px) {
@@ -66,11 +85,11 @@ Link{
     max-height: none;
   }
 
-  .project-image{
-    width:100%
+  .project-image {
+    width: 100%;
   }
 
-  .workitem-content{
+  .workitem-content {
     padding: 1.5rem 0rem;
   }
 }
