--- a/src/Components/WorkItem/WorkItem.css
+++ b/src/Components/WorkItem/WorkItem.css
@@ -10,8 +10,7 @@
   transition: box-shadow 1s ease-in-out;
   border-radius: 1rem;
   transition: transform 0.5s;
-  padding: 1.5rem 4rem 1.5rem 1.5rem;
-  max-height: 400px;
+  height: auto;
   display: flex;
   flex-direction: row;
   gap: 4rem;
@@ -54,6 +53,7 @@
   background-color: #fff;
   transform: translateY(0.5rem);
   transition: transform 2s;
+  padding: 1rem 4rem 1rem 1rem;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -80,7 +80,7 @@ Link {
 
 @media only screen and (max-width: 768px) {
   .workitem-container {
-    padding: 1.5rem;
+    height:auto;
     display: block;
     max-height: none;
   }
@@ -90,6 +90,6 @@ Link {
   }
 
   .workitem-content {
-    padding: 1.5rem 0rem;
+    padding: 1.5rem 1.5rem;
   }
 }
