--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@ html {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #fbfbfb;
 }
 
 /* ---------- Typography ---------- */
@@ -77,11 +78,12 @@ b {
 
 .containerPlain {
   padding: 4rem 1rem;
-  max-width: 60rem;
+  max-width: 75rem;
   margin: 0 auto;
 }
 
 .colouredBackground {
+  position: relative;
   margin: 0 auto;
   background: rgb(189, 79, 255);
   background: linear-gradient(
@@ -91,13 +93,9 @@ b {
   );
 }
 
-.greyBackground{
+.whiteBackground{
   margin: 0 auto;
-  background: var(--backgroundGrey)
-}
-
-.page-container {
-  margin-top: 3.5rem;
+  background: var(--globalWhite)
 }
 /* ---------- Other ---------- */
 
@@ -116,7 +114,7 @@ b {
 
 .pageHeadingPurpleSmall{
   font-weight: 600;
-  font-size: 2rem;
+  font-size: 2.5rem;
   color: var(--primaryPurple);
 }
 
@@ -126,5 +124,8 @@ code {
 }
 
 @media only screen and (max-width: 480px) {
-
+  .pageHeadingPurpleSmall{
+    font-size: 2rem;
+    line-height: 1.2;
+  }
 }
